Salesforce/main/default/main/default/objects/Campaign/fields/Epoca_de_Producao__c.field-meta.xml
<CustomField>
    <fullName>Epoca_de_Producao__c</fullName>
    <label>Época de Produção</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inverno</fullName>
            </value>
            <value>
                <fullName>Verão</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>