Salesforce/main/default/main/default/objects/Campaign/fields/Kg_para_4_parcelas_no_m_ximo__c.field-meta.xml
<CustomField>
    <fullName>Kg_para_4_parcelas_no_m_ximo__c</fullName>
    <label>Kg para 4 parcelas no máximo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>