Salesforce/main/default/main/default/objects/Campaign/fields/Kg_para_primeiro_preco__c.field-meta.xml
<CustomField>
    <fullName>Kg_para_primeiro_preco__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade Kg para o primeiro preço</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>