Salesforce/main/default/main/default/objects/Campaign/fields/Kg_para_quarto_preco__c.field-meta.xml
<CustomField>
    <fullName>Kg_para_quarto_preco__c</fullName>
    <label>Quantidade Kg para o Quarto preço</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>