Salesforce/main/default/main/default/objects/Campaign/fields/Lista_de_precios__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_precios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de precios</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>