Salesforce/main/default/main/default/objects/Campaign/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <description>Para desarrollo &quot;Venda de Basica&quot;</description>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marca</valueSetName>
    </valueSet>
</CustomField>