Salesforce/main/default/main/default/objects/Campaign/fields/Numero_maximo_de_parcelas__c.field-meta.xml
<CustomField>
    <fullName>Numero_maximo_de_parcelas__c</fullName>
    <label>Número máximo de parcelas</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>