Salesforce/main/default/main/default/objects/Campaign/fields/Porcentagem_de_volume__c.field-meta.xml
<CustomField>
    <fullName>Porcentagem_de_volume__c</fullName>
    <label>Porcentagem de volume</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>