Salesforce/main/default/main/default/objects/Campaign/fields/Primeiro_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Primeiro_vencimento__c</fullName>
    <label>Primeiro vencimento</label>
    <type>Date</type>
</CustomField>