Salesforce/main/default/main/default/objects/Campaign/fields/Quarto_Preco_Multiplicacao__c.field-meta.xml
<CustomField>
    <fullName>Quarto_Preco_Multiplicacao__c</fullName>
    <label>Quarto Preço Multiplicação</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>