Salesforce/main/default/main/default/objects/Campaign/fields/Quinto_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Quinto_vencimento__c</fullName>
    <label>Quinto vencimento</label>
    <type>Date</type>
</CustomField>