Salesforce/main/default/main/default/objects/Campaign/fields/Region_VB__c.field-meta.xml
<CustomField>
    <fullName>Region_VB__c</fullName>
    <label>Region VB</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGION 1</fullName>
            </value>
            <value>
                <fullName>REGION 2</fullName>
            </value>
            <value>
                <fullName>CERRADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>