Salesforce/main/default/main/default/objects/Campaign/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <description>Para desarrollo &quot;Venda de Basica&quot;</description>
    <label>Safra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>