Salesforce/main/default/main/default/objects/Campaign/fields/Segundo_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Segundo_vencimento__c</fullName>
    <label>Segundo vencimento</label>
    <type>Date</type>
</CustomField>