Salesforce/main/default/main/default/objects/Campaign/fields/Terceiro_Preco_Multiplicacao__c.field-meta.xml
<CustomField>
    <fullName>Terceiro_Preco_Multiplicacao__c</fullName>
    <label>Terceiro Preço Multiplicação</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>