Salesforce/main/default/main/default/objects/Campaign/fields/Terceiro_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Terceiro_vencimiento__c</fullName>
    <label>Terceiro vencimiento</label>
    <type>Date</type>
</CustomField>