Salesforce/main/default/main/default/objects/Campaign/recordTypes/Venda_de_Basica.recordType-meta.xml
<RecordType>
    <fullName>Venda_de_Basica</fullName>
    <active>true</active>
    <description>Para desarrollo &quot;Venda de Basica&quot;</description>
    <label>Venda de Basica</label>
</RecordType>