Salesforce/main/default/main/default/objects/Campaign/validationRules/Numero_maximo_de_parcelas_puede_ser_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Numero_maximo_de_parcelas_puede_ser_5</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Numero_maximo_de_parcelas__c &gt; 5 , Numero_maximo_de_parcelas__c &lt; 1)</errorConditionFormula>
    <errorDisplayField>Numero_maximo_de_parcelas__c</errorDisplayField>
    <errorMessage>Não pode ser maior que 5</errorMessage>
</ValidationRule>